--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2G
 
-minecraft_version=1.17
-yarn_mappings=1.17+build.9
-loader_version=0.11.3
+minecraft_version=1.17.1-pre1
+yarn_mappings=1.17.1-pre1+build.1
+loader_version=0.11.6
 
 #Fabric api
-fabric_version=0.35.0+1.17
+fabric_version=0.36.0+1.17
 
 # Mod Properties
-	mod_version = 1.2.12
+	mod_version = 1.2.12a
 	maven_group = com.kwpugh
-	archives_base_name = MoreGems-Fabric-1.17
+	archives_base_name = MoreGems-Fabric-1.17.1
 
 #Curios API
 	curios_version = 0.0.7-1.16.3
